...
                <NativeTabs.Trigger.Label>Issues</NativeTabs.Trigger.Label>
              </NativeTabs.Trigger>
              <NativeTabs.Trigger
                name="pulls"
                hidden={car}
                disableAutomaticContentInsets={Platform.OS === 'ios'}
                testID="Tab PRs"
                disabled={!runtime.profiles.length}
                listeners={{
                  tabPress: () => active === 'pulls' && router.dismissTo('/pulls'),
                }}
              >
                <NativeTabs.Trigger.Icon src={iconAssets.pulls} renderingMode="template" />
...
                <NativeTabs.Trigger.Label>Artifacts</NativeTabs.Trigger.Label>
              </NativeTabs.Trigger>
              <NativeTabs.Trigger name="jobs" hidden />
              <NativeTabs.Trigger
                name="settings"
                disableAutomaticContentInsets={Platform.OS === 'ios'}
                testID="Tab Settings"
                listeners={{
                  tabPress: () => active === 'settings' && router.dismissTo('/settings'),
                }}
              >
                <NativeTabs.Trigger.Icon src={iconAssets.settings} renderingMode="template" />
                <NativeTabs.Trigger.Label>Settings</NativeTabs.Trigger.Label>
...
