...
              </Stack.Toolbar.Button>
            ))}
          {buttons?.some((button) => button.overflow) && (
            <Stack.Toolbar.Menu
              icon={iconAssets.more}
              iconRenderingMode="template"
              accessibilityLabel="Task tools"
              tintColor={colors.text}
            >
              {buttons
                .filter((button) => button.overflow)
                .map((button) => (
                  <Stack.Toolbar.MenuAction
...
